--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -15,6 +15,7 @@
             <div class="mt-2">
               <input [formControl]="email" id="email" name="email" type="email" autocomplete="email" required
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+              <p [hidden]="email.valid || email.untouched">This Email is not allowed</p>
             </div>
           </div>
 
@@ -26,14 +27,15 @@
               </div>
             </div>
             <div class="mt-2">
-              <input [formControl]="password" type="password" 
+              <input [formControl]="password" type="password"
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+              <p [hidden]="password.valid || password.untouched">This password is not allowed</p>
             </div>
           </div>
 
           <div>
-            <button type="submit" (click)="login()"
-              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign
+            <button type="submit" [disabled]="loginForm.invalid" (click)="login()"
+              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign
               in</button>
           </div>
         </form>
