--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,6 +1,7 @@
 <section>
   <div class="container mx-auto">
-    <div class="flex min-h-full flex-col justify-center lg:px-8 shadow-lg backdrop-blur-sm bg-white/30">
+    <div class="flex min-h-full flex-col justify-center lg:px-8 shadow-2xl backdrop-blur-sm bg-white/30 mx-auto py-8"
+      style="width: 35%;">
       <div class="sm:mx-auto sm:w-full sm:max-w-sm">
         <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
           alt="Your Company">
@@ -13,10 +14,10 @@
           <div>
             <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
             <div class="mt-2">
-              <input pattern="^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9.-]+$" ngModel #email="ngModel" name="email" id="email" name="email"
-                type="email" autocomplete="email" required
+              <input pattern="^[a-zA-Z0-9+_.-]+@[a-zA-Z0-9.-]+$" ngModel #email="ngModel" name="email" id="email"
+                name="email" type="email" autocomplete="email" required
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-              <p [hidden]="email.valid || email.untouched">This Email is not allowed</p>
+              <p [hidden]="email.valid || email.untouched" class="text-red-700">This Email is not allowed</p>
             </div>
           </div>
 
@@ -30,7 +31,7 @@
             <div class="mt-2">
               <input minlength="6" ngModel #password="ngModel" name="password" required type="password"
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-              <p [hidden]="password.valid || password.untouched">This password is not allowed</p>
+              <p [hidden]="password.valid || password.untouched" class="text-red-700">This password is not allowed</p>
             </div>
           </div>
 
