get my snippet done

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,13 @@
-<p>about works!</p>
+<section>
+  <p> about works!</p>
+</section>
+<!-- @defer () {
+<app-about></app-about>
+}@placeholder {
+  place holder for the component
+}
+@loading {
+  <p>this is loading</p>
+}@error {
+
+} -->
