--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,25 @@
 <section>
-  <p>this is home</p>
-  <p>{{items}}</p>
+  <style>
+    .code-container {
+      white-space: pre-wrap;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      word-break: break-all;
+      overflow: auto;
+      resize: horizontal;
+      max-width: 100%;
+    }
+  </style>
+  <div class="container mx-auto">
+    <div class="grid grid-cols-2 md:grid-cols-auto lg:grid-cols-auto gap-4 ">
+      @for (item of items; track item.id) {
+      <div class="grid-flow-row-dense p-4 border rounded shadow code-container">
+        <a [routerLink]="['snippet',item.id]">
+          <h3 class="text-lg font-bold mb-2">{{ item.title }}</h3>
+        </a>
+        <pre class="bg-gray-100 p-2 rounded code-container">{{ item.code }}</pre>
+      </div>
+      }
+    </div>
+  </div>
 </section>
