--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -29,6 +29,7 @@
             <div class="mt-2">
               <input [formControl]="password" type="password"
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                <p [hidden]="password.valid || password.untouched" class="text-red-700">please enter correct password</p>
             </div>
           </div>
 
