--- a/src/app/components/code-bin/code-bin.component.html
+++ b/src/app/components/code-bin/code-bin.component.html
@@ -1,5 +1,6 @@
 <section>
   <div class="container mx-auto">
+    <app-toast></app-toast>
     <div class="flex min-h-full flex-col justify-center lg:px-8 shadow-2xl backdrop-blur-sm bg-white/30 mx-auto py-8"
       style="width: 35%;">
       <div class="sm:mx-auto sm:w-full sm:max-w-sm">
