--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,6 +11,10 @@
     }
   </style>
   <div class="container mx-auto">
+    <div *ngIf="loading" class="text-center p-4">
+      <app-shimmer></app-shimmer>
+    </div>
+    <div *ngIf="!loading && items.length === 0" class="text-center p-4">No snippets found!</div>
     <div class="grid grid-cols-2 md:grid-cols-auto lg:grid-cols-auto gap-4 ">
       @for (item of items; track item.id) {
       <div class="grid-flow-row-dense p-4 border rounded shadow code-container">
