--- a/src/app/components/mysnippet/mysnippet.component.html
+++ b/src/app/components/mysnippet/mysnippet.component.html
@@ -11,14 +11,20 @@
     }
   </style>
   <div class="container mx-auto ">
+    <app-toast></app-toast>
+    <div *ngIf="loading" class="text-center p-4">
+      <app-shimmer></app-shimmer>
+    </div>
+    <div *ngIf="!loading && items.length === 0" class="text-center p-4">No snippets found!</div>
+
     <div class="grid grid-cols-2 md:grid-cols-auto lg:grid-cols-auto gap-4 ">
       @for (item of items; track item.id) {
       <div class="grid-flow-row-dense p-4 border rounded shadow code-container">
         <div class="flex">
           <h3 class="text-lg font-bold mb-2 mr-auto">{{ item.title }}</h3>
-          <button type="button"
+          <button type="button" (click)="editSnippet(item.id)"
             class="text-white bg-green-700 hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800">Edit</button>
-          <button type="button"
+          <button type="button" (click)="deleteSnippet(item.id)"
             class="text-white bg-red-700 hover:bg-red-800 focus:outline-none focus:ring-4 focus:ring-red-300 font-medium rounded-full text-sm px-5 py-2.5 text-center me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 dark:focus:ring-red-900">Remove</button>
         </div>
         <pre class="bg-gray-100 p-2 rounded code-container">{{ item.code }}</pre>
