--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,16 @@
 <section>
-  <div class="container mx-auto">
-    <div class="flex min-h-full flex-col justify-center lg:px-8 py-8 shadow-2xl bg-white mx-auto" style="width: 35%;">
-      <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+  <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+    <app-toast></app-toast>
+    <div
+      class="flex px-4 min-h-full flex-col justify-center py-8 sm:py-12 lg:py-16 shadow-2xl bg-white mx-auto w-full sm:w-2/3 md:w-1/2 lg:w-1/3">
+      <div class="sm:mx-auto sm:w-full sm:max-w-md">
         <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
           alt="Your Company">
         <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Login to your account
         </h2>
       </div>
 
-      <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+      <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-md">
         <form class="space-y-6" [formGroup]="loginForm" method="POST">
           <div>
             <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Email address</label>
@@ -29,24 +31,23 @@
             <div class="mt-2">
               <input [formControl]="password" type="password"
                 class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
-                <p [hidden]="password.valid || password.untouched" class="text-red-700">please enter correct password</p>
+              <p [hidden]="password.valid || password.untouched" class="text-red-700">please enter correct password</p>
             </div>
           </div>
 
           <div>
-            <button type="submit" [disabled]="loginForm.invalid" (click)="login()"
-              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 ">Sign
-              in</button>
+            <button type="submit" (click)="login()"
+              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+              Sign in
+            </button>
           </div>
         </form>
         <p class="mt-10 text-center text-sm text-black-500">
-          Don't have account?
+          Don't have an account?
           <a routerLink="/signup" routerLinkActive="active"
             class="font-semibold leading-6 text-indigo-600 hover:text-indigo-500">SignUp</a>
         </p>
       </div>
     </div>
-
   </div>
-
 </section>
