--- a/src/app/components/mysnippet/mysnippet.component.html
+++ b/src/app/components/mysnippet/mysnippet.component.html
@@ -11,7 +11,6 @@
     }
   </style>
   <div class="container mx-auto ">
-    <app-toast></app-toast>
     <div *ngIf="loading" class="text-center p-4">
       <app-shimmer></app-shimmer>
     </div>
@@ -26,7 +25,22 @@
             class="text-white bg-green-500 hover:-translate-y-1 transform transition duration-200 hover:shadow-md rounded-md font-medium text-sm px-5 py-2.5 text-center me-2 mb-2">Edit</button>
 
           <button type="button" (click)="deleteSnippet(item.id)"
-            class="text-white bg-red-500 hover:-translate-y-1 transform transition duration-200 hover:shadow-md rounded-md font-medium text-sm px-5 py-2.5 text-center me-2 mb-2">Remove</button>
+            class="text-white bg-red-500 hover:-translate-y-1 transform transition duration-200 hover:shadow-md rounded-md font-medium text-sm px-5 py-2.5 text-center me-2 mb-2">Remove
+          </button>
+        </div>
+        <div dir="rtl mt-3">
+          <div class="relative h-8">
+            <button (click)="copyCode(item.code)" class="hover:-translate-y-1 transform transition duration-200 absolute h-10 top-0 start-0">
+              <span id="default-icon" class="inline-flex items-center">
+                <svg class="w-3.5 h-3.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                  viewBox="0 0 18 20">
+                  <path
+                    d="M16 1h-3.278A1.992 1.992 0 0 0 11 0H7a1.993 1.993 0 0 0-1.722 1H2a2 2 0 0 0-2 2v15a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2Zm-3 14H5a1 1 0 0 1 0-2h8a1 1 0 0 1 0 2Zm0-4H5a1 1 0 0 1 0-2h8a1 1 0 1 1 0 2Zm0-5H5a1 1 0 0 1 0-2h2V2h4v2h2a1 1 0 1 1 0 2Z" />
+                </svg>
+                <span class="ml-2 text-xs font-semibold">Copy</span>
+              </span>
+            </button>
+          </div>
         </div>
         <pre class="bg-gray-100 p-2 rounded code-container">{{ item.code }}</pre>
       </div>
