--- a/src/app/components/mysnippet/mysnippet.component.html
+++ b/src/app/components/mysnippet/mysnippet.component.html
@@ -21,6 +21,7 @@
       <div class="grid-flow-row-dense p-4 border rounded shadow code-container">
         <div class="flex">
           <h3 class="text-lg font-bold mb-2 mr-auto">{{ item.title }}</h3>
+          <h5 class="ml-auto mr-4">{{ item.accessible }}</h5>
           <button type="button" (click)="editSnippet(item)"
             class="text-white bg-green-500 hover:-translate-y-1 transform transition duration-200 hover:shadow-md rounded-md font-medium text-sm px-5 py-2.5 text-center me-2 mb-2">Edit</button>
 
