--- a/src/app/components/code-bin/code-bin.component.html
+++ b/src/app/components/code-bin/code-bin.component.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-md">
-        <form class="space-y-6" [formGroup]="binForm" method="POST">
+        <form class="space-y-6" [formGroup]="binForm" (ngSubmit)="save()">
           <div>
             <label for="title" class="block text-sm font-medium leading-6 text-gray-900">Title</label>
             <div class="mt-2">
@@ -27,9 +27,20 @@
               <p [hidden]="code.valid || code.untouched" class="text-red-700">Please enter the Snippet</p>
             </div>
           </div>
-
+          <div class="flex">
+            <div class="flex items-center mr-4">
+              <input type="radio" checked [formControl]="accessible" value="public" name="accessible"
+                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 focus:ring-3">
+              <label for="accessible" class="ms-2 text-sm font-medium ">Public</label>
+            </div>
+            <div class="flex items-center">
+              <input type="radio" [formControl]="accessible" value="private" name="accessible"
+                class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 focus:ring-3">
+              <label for="accessible" class="ms-2 text-sm font-medium">Private</label>
+            </div>
+          </div>
           <div>
-            <button type="submit" (click)="save()"
+            <button type="submit"
               class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">New
               Snippet</button>
           </div>
