--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,9 +3,9 @@
     <div
       class="flex px-4 min-h-full flex-col justify-center py-8 sm:py-12 lg:py-16 shadow-2xl bg-white mx-auto w-full sm:w-2/3 md:w-1/2 lg:w-1/3">
       <div class="sm:mx-auto sm:w-full sm:max-w-md">
-        <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-          alt="Your Company">
-        <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Login to your account
+        <img class="mx-auto h-32 w-auto"
+          src="https://cdn3d.iconscout.com/3d/premium/thumb/password-security-7044924-5731481.png?f=webp" alt="3d icon">
+        <h2 class="mt-5 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Login to your account
         </h2>
       </div>
 
